--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "babel-plugin-rewire": "^1.2.0",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "buffer": "^6.0.3",
     "copy-webpack-plugin": "8.1.1",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "css-loader": "5.2.4",
     "file-loader": "6.2.0",
+    "file-system": "^2.2.2",
     "html-webpack-plugin": "5.3.1",
     "mini-css-extract-plugin": "^1.5.0",
     "node-fetch": "^2.6.1",
@@ -52,5 +54,10 @@
     "jest": "^26.6.3",
     "url-loader": "^4.1.1",
     "webpack-cli": "^4.7.0"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
