--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "servlet web chat PinkLink",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --open",
+    "start": "node index.js",
     "test": "jest",
     "build": "webpack --mode production",
     "dev": "webpack --mode development"
